--- a/20211213.ipynb
+++ b/20211213.ipynb
@@ -65,7 +65,7 @@
       "rate 0.9\n",
       "data.shape[0]: 500\n",
       "rate 450\n",
-      "TrainData (1000, 256, 1, 1, 256)\n",
+      "TrainData (200, 256, 1, 1, 256)\n",
       "TestData (50, 256)\n",
       "ÄnomalyDta (100, 256)\n"
      ]
@@ -82,7 +82,7 @@
     "data = Dataset.read_savedata(\"sample_test\")\n",
     "print(data.shape[0])\n",
     "print(\"----------------------\")\n",
-    "data, test_data , anomaly_data= Dataset.read_traindata(\"sample_data\", \"sample_test\", 1000, 256, 1)\n"
+    "data, test_data , anomaly_data= Dataset.read_traindata(\"sample_data\", \"sample_test\", 200, 256, 1)\n"
    ]
   },
   {
@@ -94,55 +94,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "make\n",
-      "type:x<class 'torch.Tensor'>,recon_data<class 'LossFunction.SSIMLoss'>\n",
-      "data:xtensor([[[0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836,\n",
-      "          0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836, 0.4836]]],\n",
-      "       grad_fn=<SigmoidBackward0>),recon_dataSSIMLoss()\n"
+      "make\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'SSIMLoss' object has no attribute 'detach'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/gl/kcbdb7pj0yz8846ytcdrjm140000gn/T/ipykernel_60902/557397106.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mrecon\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1100\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1101\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1102\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1103\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1104\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/LAB_LAST/AutoEncoder/AutoEncoder/LossFunction.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(recon_data, x, window, alfa, beta, gamma, c1, c2)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"type:x{},recon_data{}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecon_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data:x{},recon_data{}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrecon_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mrecon_data\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mrecon_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0minput_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1175\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1177\u001b[0;31m         raise AttributeError(\"'{}' object has no attribute '{}'\".format(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             type(self).__name__, name))\n\u001b[1;32m   1179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SSIMLoss' object has no attribute 'detach'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/core/fromnumeric.py:3419: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/core/_methods.py:188: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/core/_methods.py:261: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/core/_methods.py:221: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  arrmean = um.true_divide(arrmean, div, out=arrmean, casting='unsafe',\n",
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/core/_methods.py:253: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/lib/function_base.py:380: RuntimeWarning: Mean of empty slice.\n",
+      "  avg = a.mean(axis)\n",
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/core/_methods.py:180: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  ret = um.true_divide(\n",
+      "/Users/yukihorikawa/Desktop/LAB_LAST/AutoEncoder/AutoEncoder/LossFunction.py:41: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  x_cov = np.cov([x_batch,recon_batch])\n",
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/lib/function_base.py:2493: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  c *= np.true_divide(1, fact)\n",
+      "/Users/yukihorikawa/opt/anaconda3/envs/lab2/lib/python3.8/site-packages/numpy/lib/function_base.py:2493: RuntimeWarning: invalid value encountered in multiply\n",
+      "  c *= np.true_divide(1, fact)\n"
      ]
     }
    ],
@@ -150,7 +128,7 @@
     "\n",
     "losslist=[]\n",
     "\n",
-    "model = mainmodel.Autoencoder2()\n",
+    "model = mainmodel.Autoencoder_batchnorm()\n",
     "# criterion = nn.MSELoss()\n",
     "criterion = SSIMLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 1e-3, weight_decay = 1e-5)\n",
@@ -161,7 +139,7 @@
     "for epoch in data:\n",
     "    for data in epoch:\n",
     "        recon = model(data)\n",
-    "        print(\"type:recon_data{}\".format(type(recon)))\n",
+    "        # print(\"type:recon_data{}\".format(type(recon)))\n",
     "        loss = criterion(recon, data)\n",
     "        \n",
     "        optimizer.zero_grad()\n",
@@ -169,7 +147,7 @@
     "        optimizer.step()\n",
     "\n",
     "#     print('Epoch:{}, Loss:{:.4f}'.format(epoch+1, float(loss)))\n",
-    "    print('Loss:{:.4f}'.format(float(loss)))\n",
+    "    # print('Loss:{:.4f}'.format(float(loss)))\n",
     "    losslist.append(loss)\n",
     "    outputs.append((epoch, data, recon))"
    ]
