--- a/VAE .ipynb
+++ b/VAE .ipynb
@@ -78,7 +78,7 @@
     "print(data.shape[0])\n",
     "print(\"----------------------\")\n",
     "# data, test_data , anomaly_data= Dataset.read_traindata(\"sample_data\", \"sample_test\", 2000, 1024, 1)\n",
-    "data, ori_data, test_data , anomaly_data= Dataset.read_Auged_traindata(\"sample_data\", \"sample_test\", 500, 1024, 1)\n"
+    "data, ori_data, test_data , anomaly_data= Dataset.read_Auged_traindata(\"/Users/yukihorikawa/Desktop/LAB_LAST/AutoEncoder/AutoEncoder/SensorData/1224NewSensorData/1224Data_train/train.npy\", \"/Users/yukihorikawa/Desktop/LAB_LAST/AutoEncoder/AutoEncoder/SensorData/1224NewSensorData/1224Data_anomaly/anomaly.npy\", 1000, 256, 1, readType=False)\n"
    ]
   },
   {
